--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aulas HTML</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <style>
         /* #bloco {
             color: blue;
@@ -34,6 +34,8 @@
     <button onclick="inserirTexto()">Inserir</button>
     <button onclick="limparTexto()">Limpar</button>
     <input type="text" name="texto" id="campo">
+    <hr>
+    <a href="cadastro.html">Cadastro</a>
 </body>
 
 <script>
